homelab/cyberchef/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
  annotations:
    argocd.argoproj.io/sync-wave: "0"
