homelab/cyberchef/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: cyberchef
  labels:
    app: cyberchef
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: cyberchef
